--- a/express/sandbox/server/package.json
+++ b/express/sandbox/server/package.json
@@ -11,8 +11,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "mongoose": "^6.0.12",
-        "mongose": "^0.0.2-security"
+        "mongose": "^0.0.2-security",
+        "socket.io": "^4.3.2"
     }
 }
